tests/machine/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:3: error: identifier expected but 'val' found.
  val result = (((for { i <- items } yield (i("cat"), (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("cat" -> (g._1), "share" -> (for { x <- g } yield if ((x.flag).asInstanceOf[Boolean]) x.val else 0.sum / for { x <- g } yield x.val.sum)) } }.toList).sortBy(i => g._1)
                                                                                                                                                                                                                                                                             ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:3: error: ')' expected but '}' found.
  val result = (((for { i <- items } yield (i("cat"), (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("cat" -> (g._1), "share" -> (for { x <- g } yield if ((x.flag).asInstanceOf[Boolean]) x.val else 0.sum / for { x <- g } yield x.val.sum)) } }.toList).sortBy(i => g._1)
                                                                                                                                                                                                                                                                                                                               ^
two errors found
